[package]
name = "fp-wavelet-trees"
version = "0.1.0"
authors = ["Mirco","Florian","Alwin","Josef"]
edition = "2018"

[dependencies]
bio = "*"
bv = { version = "0.10", features = ["serde"] }
serde = "1.0.91"
itertools = "*"



[dev-dependencies]
serde_json = "1.0.39"
unicode-segmentation = "1.3.0"
criterion = "*"

[[bench]]
name="benchmark"
harness = false